# ItoLib

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.github/: codecov.yml
.github/workflows/: rust.yml
crates/itolib/: Cargo.toml
crates/itolib-instruments/: Cargo.toml
crates/itolib-instruments/src/: instrument.rs  lib.rs
crates/itolib-instruments/src/exercises/: american_exercise.rs  european_exercise.rs  mod.rs
crates/itolib-instruments/src/options/: american_option.rs  european_option.rs  option.rs
crates/itolib-instruments/src/payoffs/: mod.rs  payoff.rs  striked_payoff.rs  vanilla_payoff.rs
crates/itolib-macros/: Cargo.toml
crates/itolib-macros/src/: any_true.rs  assert_approx_eq_money.rs  lib.rs
crates/itolib-math/: Cargo.toml
crates/itolib-math/src/: float_like.rs  lib.rs
crates/itolib-math/src/interpolation/: interpolator.rs  linear_interpolator.rs  mod.rs
crates/itolib-money/: Cargo.toml
crates/itolib-money/src/: compounding.rs  currency.rs  exchange_rate.rs  exchange_rate_manager.rs  interest_rate.rs  lib.rs  money.rs
crates/itolib-pricers/: Cargo.toml
crates/itolib-pricers/src/: analytic_black_scholes_merton.rs  lib.rs  pricer.rs
crates/itolib-term-structures/: Cargo.toml
crates/itolib-term-structures/src/: lib.rs  term_structure.rs
crates/itolib-term-structures/src/volatility/: black_volatility_curve.rs  black_volatility_term_structure.rs  constant_vol_term_structure.rs  mod.rs  volatility_term_structure.rs
crates/itolib-term-structures/src/yieldd/: flat_forward_term_structure.rs  mod.rs  yield_term_structure.rs
crates/itolib-time/: Cargo.toml
crates/itolib-time/src/: datetime.rs  duration.rs  frequency.rs  lib.rs
crates/itolib-types/: Cargo.toml
crates/itolib-types/src/: domain_error.rs  float.rs  lib.rs
crates/itolib-types/src/financial/: compound_factor.rs  discount_factor.rs  macros.rs  mod.rs  monetary_number.rs  strike.rs  volatility.rs
crates/itolib-types/src/float/: README.md  finite_float.rs  into_float.rs  macros.rs  mod.rs  nonnegative_finite_float.rs  nonnegative_float.rs  positive_finite_float.rs  positive_float.rs
crates/itolib-types/src/math/: mod.rs  percentage.rs
crates/itolib/src/: lib.rs
examples/: black_scholes.rs
src/: compounding.rs  currency.rs  exchange_rate.rs  interest_rate.rs  lib.rs  macros.rs  money.rs  types.rs
src/instruments/: instrument.rs  mod.rs
src/instruments/exercises/: american_exercise.rs  european_exercise.rs  mod.rs
src/instruments/options/: american_option.rs  european_option.rs  mod.rs  option.rs
src/instruments/payoffs/: mod.rs  vanilla_payoff.rs
src/math/: float_like.rs  mod.rs
src/math/interpolation/: linear_interpolator.rs  mod.rs
src/money/: currency.rs  exchange_rate.rs  exchange_rate_manager.rs  mod.rs
src/pricers/: analytic_black_scholes_merton.rs  mod.rs
src/term_structures/: flat_forward_term_structure.rs  mod.rs  term_structure.rs  yield_term_structure.rs
src/term_structures/volatility_structure/: black_constant_volatility_term_structure.rs  black_volatility_curve.rs  black_volatility_term_structure.rs  constant_vol_term_structure.rs  mod.rs
src/term_structures/yield_structure/: flat_forward_term_structure.rs  mod.rs
src/time/: datetime.rs  duration.rs  frequency.rs  mod.rs
