[workspace]
members = ["crates/*", "examples/*"]
default-members = ["crates/itolib"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Meet Patel <meet.s.patel.nj@gmail.com>"]
homepage = "https://github.com/MeetThePatel/ItoLib/"
repository = "https://github.com/MeetThePatel/ItoLib/"
license-file = "LICENSE"
readme = "README.md"

[workspace.dependencies]
# ItoLib
itolib = { path = "crates/itolib" }
itolib-instruments = { path = "crates/itolib-instruments" }
itolib-macros = { path = "crates/itolib-macros" }
itolib-math = { path = "crates/itolib-math" }
itolib-money = { path = "crates/itolib-money" }
itolib-term-structures = { path = "crates/itolib-term-structures" }
itolib-types = { path = "crates/itolib-types" }
itolib-time = { path = "crates/itolib-time" }

# External
assert_approx_eq = "1.1.0"
day_count_conventions = { version = "0.1.7", features = ["hifitime"] }
hifitime = "3.9.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ordered-float = "4.2.2"
permutation = "0.4.1"
statrs = "0.17.1"
thiserror = "1.0.63"
